@@ -4,6 +4,6 @@ EXPOSE 8080
 
 RUN mkdir /app
 
-COPY  .
+COPY --from=build /app/target/spring-petclinic-*.jar /spring-petclinic.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+CMD ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/spring-petclinic.jar"]
